[tool.poetry]
name = "algorithms-coursera"
version = "0.1.0"
description = "basic algorithms and data structures"
authors = ["anikitina <anikitina@slice.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# linter
flake8 = "*"
mypy = "*"
pylint = "*"
# test
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
