[tool.poetry]
name = "algorithms-coursera"
version = "0.1.0"
description = "basic algorithms and data structures"
authors = ["anikitina <anikitina@slice.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
# linter
flake8 = "*"
mypy = "*"
pylint = "*"
# test
pytest = "*"
hypothesis = "^5.19.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
